# SourceGuide

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG_EN.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  README.md  README_EN.md  SOURCEGUIDE_SPEC.md  SOURCEGUIDE_SPEC_EN.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  docs.md  feature_request.md  question.md
.github/workflows/: ci.yml
examples/: README.md  README_EN.md
src/sourceguide/: __init__.py  ai.py  cli.py  config.py  core_files.py  models.py  pipeline.py  renderer.py  repository.py  runtime.py  scanner.py  stack.py  validators.py  writer.py
tests/: test_cli.py  test_config.py  test_core_files_validator.py  test_pipeline_integration.py  test_repository.py  test_scanner_stack_runtime.py
