[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sourceguide"
version = "0.1.0"
description = "Turn any GitHub repository into guided source-code learning paths."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SourceGuide Contributors" }
]
keywords = ["cli", "documentation", "source-code", "openai", "learning-path"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "httpx>=0.27.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
sourceguide = "sourceguide.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sourceguide"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

